--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
             <ul>
                 <li>bricks</li>
                 <li>quickcrete</li>
-                
+                <li>sands</li>
             </ul>
             
         </div>
